--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body{
     margin-bottom: 2.5rem;
     margin-top: .5rem;
     color: #333;
+}.intro{
+    text-align: left;
+    margin-bottom: 2.5rem;
+    margin-top: .5rem;
+    color: #333;
 }
 .list{
     
@@ -25,7 +30,7 @@ body{
    margin-top:1rem;
    border-radius: 1000px;
    width:200px;
-   background-color: darkgreen;
+   background-color: darkblue;
    color: white;
    font-weight: 700;
    padding:1rem;
