--- a/style.css
+++ b/style.css
@@ -4,6 +4,21 @@ body{
     font-weight: 400;
     font-style: normal;
 }
+#qr-container{
+    background-color:white;
+    display:inline-block;
+    padding:1rem;
+}
+#url{
+    font-size: 14px;
+    font-family:  Arial, Helvetica, sans-serif;
+    margin-top: 5px;
+    color:black;
+    font-weight:bold;
+
+
+
+}
 .page{
     margin:0 auto;
     max-width: 400px;
@@ -51,6 +66,7 @@ body{
 .heading{
     font-weight: 700;
     font-size: 1.5rem;
+    margin:1rem 0;
 }
 .libre-baskerville-regular {
     font-family: "Libre Baskerville", serif;
