--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
     display:inline-block;
     padding:1rem;
 }
+#qrcode{
+        display:inline-block;
+}
 #url{
     font-size: 14px;
     font-family:  Arial, Helvetica, sans-serif;
